log.txt
Sending build context to Docker daemon  4.354MB
Step 1/25 : FROM ekidd/rust-musl-builder:latest AS builder
 ---> 6d1d997f786d
Step 2/25 : RUN USER=root cargo new --bin minerva
 ---> Using cache
 ---> 5efff1dfb354
Step 3/25 : WORKDIR ./minerva
 ---> Using cache
 ---> 734b0f5277d4
Step 4/25 : COPY ./Cargo.lock ./Cargo.lock
 ---> Using cache
 ---> 7e7358f22718
Step 5/25 : COPY ./Cargo.toml ./Cargo.toml
 ---> Using cache
 ---> b9dfe01d60d2
Step 6/25 : RUN touch src/lib.rs
 ---> Using cache
 ---> 4acbdf92efe8
Step 7/25 : RUN cargo build --release
 ---> Using cache
 ---> 2625fdce4434
Step 8/25 : RUN rm src/*.rs
 ---> Using cache
 ---> 341af7c98bb5
Step 9/25 : ADD . ./
 ---> 0207339a3960
Step 10/25 : RUN ls -R src/ && rustc --version
 ---> Running in 13ca43ed3d71
src/:
bin
bo
controller
inpututils.rs
lib.rs
main.rs
model
routes

src/bin:
cria_cliente.rs
cria_produto.rs

src/bo:
auth
clientes.rs
db.rs
mod.rs
redis.rs
usuarios.rs
whatsapp.rs

src/bo/auth:
jwt.rs
mod.rs

src/controller:
clientes.rs
estoque.rs
log.rs
login.rs
mod.rs
produtos.rs
usuarios.rs

src/model:
cliente.rs
endereco.rs
enum_error.rs
estoque.rs
logdb.rs
login.rs
mod.rs
produto.rs
schema.rs
usuario.rs

src/routes:
clientes.rs
estoque.rs
log.rs
login.rs
mod.rs
produtos.rs
respostas.rs
usuarios.rs
rustc 1.59.0 (9d1b2106e 2022-02-23)
Removing intermediate container 13ca43ed3d71
 ---> 186b03c3c55b
Step 11/25 : RUN rm ./target/x86_64-unknown-linux-musl/release/deps/minerva*
 ---> Running in d2babaaf1be9
Removing intermediate container d2babaaf1be9
 ---> 9052e4ef31f9
Step 12/25 : RUN cargo build --release
 ---> Running in 59a867a735b2
[91m   Compiling Minerva v0.5.0 (/home/rust/src/minerva)
[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `bo`
  --> src/main.rs:28:16
   |
28 |     let pool = bo::db::cria_pool_conexoes();
   |                ^^ use of undeclared crate or module `bo`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `bo`
  --> src/main.rs:29:5
   |
29 |     bo::db::garante_usuario_inicial(&pool);
   |     ^^ use of undeclared crate or module `bo`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `bo`
  --> src/main.rs:31:22
   |
31 |     let redis_pool = bo::redis::cria_pool_redis();
   |                      ^^ use of undeclared crate or module `bo`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:39:29
   |
39 |         .mount("/", routes![routes::index])
   |                             ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:40:26
   |
40 |         .mount("/login", routes::login::constroi_rotas())
   |                          ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:41:29
   |
41 |         .mount("/clientes", routes::clientes::constroi_rotas())
   |                             ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:42:29
   |
42 |         .mount("/produtos", routes::produtos::constroi_rotas())
   |                             ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:43:28
   |
43 |         .mount("/estoque", routes::estoque::constroi_rotas())
   |                            ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:44:24
   |
44 |         .mount("/log", routes::log::constroi_rotas())
   |                        ^^^^^^ use of undeclared crate or module `routes`

[0m[91merror[E0433]: failed to resolve: use of undeclared crate or module `routes`
  --> src/main.rs:45:29
   |
45 |         .mount("/usuarios", routes::usuarios::constroi_rotas())
   |                             ^^^^^^ use of undeclared crate or module `routes`

[0m[91mwarning: unused import: `minerva::*`
  --> src/main.rs:21:5
   |
21 | use minerva::*;
   |     ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

[0m[91mFor more information about this error, try `rustc --explain E0433`.
[0m[91mwarning: `Minerva` (bin "minerva") generated 1 warning
[0m[91merror: could not compile `Minerva` due to 10 previous errors; 1 warning emitted
[0m